<resources>
    <!-- Activity Labels -->
    <string name="title_activity_standard_registration">Standard Registration</string>
    <string name="title_activity_medical_registration">Medical Registration</string>
    <string name="title_activity_user_profile">User Profile</string>

    <!-- View strings -->
    <string name="app_name">SafeSpace</string>
    <string name="app_title">SafeSpace</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="register_link">Not registered yet? Click here!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="birthday">Birthday</string>
    <string name="click_for_birthday">Click to select birthday</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="training_center_id">Training Center ID</string>
    <string name="user_name_label">Name</string>
    <string name="user_name">Last Name, First Name</string>
    <string name="birthday_label">Birthday</string>
    <string name="health_and_conditions_label">Health and Conditions</string>
    <string name="health_conditions_placeholder">Health information will appear in this section.</string>
    <string name="skills_certifications_label">Skills and Certifications</string>
    <string name="skills_certifications_placeholder">Medical skills and certifications will appear here.</string>
    <string name="user_type_label">User Type</string>
    <string name="user_type">User type</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="see_users">Users Near You</string>
    <string name="logout">Logout</string>
    <string name="update_name">Update Name</string>
    <string name="update_birthday">Update Birthday</string>
    <string name="update_conditions">Update Medical Conditions</string>
    <string name="add_condition_btn">Add New Condition</string>
    <string name="enter_condition">Enter Condition</string>
    <string name="update_profile">Update Profile</string>
    <string name="confirm_update">Update</string>
    <string name="emergency_button">EMERGENCY</string>
    <string name="emergency_hint">Be brief!</string>

    <!-- Options for medical skills in Medical Registration dropdown-->
    <string-array name="medical_skills">
        <item>CPR</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
