<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    android:background="@color/blue0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:id="@+id/reg_standFirstName"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:background="@drawable/custom_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:id="@+id/reg_standLastName"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:background="@drawable/custom_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/reg_standEmail"
            android:padding="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:id="@+id/reg_standPass"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:background="@drawable/custom_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:id="@+id/reg_standConfirmPass"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:background="@drawable/custom_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:paddingLeft="5dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/stand_reg_DOB"
            android:layout_gravity="center_horizontal"
            android:text="@string/click_for_birthday"
            android:textAllCaps="false"
            android:theme="@style/AppTheme.Button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/reg_standRegisterBtn"
            android:text="@string/register"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:theme="@style/AppTheme.Button"/>

    </LinearLayout>

</LinearLayout>