<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="4dp">

            <ImageView
                android:id="@+id/user_photo"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:scaleType="centerInside"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"/>

            <ImageButton
                android:id="@+id/user_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/user_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday_label"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/health_and_conditions_label"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="test"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Skills and Certificaitions"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="test"/>

    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Logout"/>

</LinearLayout>